refactor(import): reference the import types through imports, not qualified names
Inline fully-qualified names in the new import code and its tests made the diff
harder to read than the CSV code it mirrors; every type is now imported and used
by its simple name, and the touched test import blocks are ordered again.